[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
colored = "2.0.4"
serde = {version="1.0.189", features=["derive"]}
serde_json = "1.0.107"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
